--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "lowdb": "^7.0.1",
+    "picocolors": "^1.1.1",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
